--- a/index.html
+++ b/index.html
@@ -10,20 +10,37 @@
   </head>
 
   <body>
-<<<<<<< Updated upstream
+    <!-- <header class="navbar navbar-default" id="header">
+      <nav id="nav-bar">
+        <ul>
+          <li><a href="#" class="nav-link">Features </a></li>
+          <li><a href="#" class="nav-link">How it works </a></li>
+          <li><a href="#" class="nav-link">Pricing </a></li>
+        </ul>
+      </nav>
+    </header> -->
+
     <header id="header">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png" alt="logo" id="header-img">
-      <nav id="nav-bar">
-      <ul>
-        <li><a href="#" class="nav-link">Features </a></li>
-        <li><a href="#" class="nav-link">How it works </a></li>
-        <li><a href="#" class="nav-link">Pricing </a></li>
-      </ul>
+      <nav class="navbar navbar-default" id="nav-bar">
+        <div class="container-fluid">
+          <!-- <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+            </a>
+          </div> -->
+          <ul class="nav navbar-nav">
+            <!-- <li class="active"><a href="#">Home</a></li> -->
+            <li><a href="#features" class="nav-link">Features </a></li>
+            <li><a href="#howItWorks" class="nav-link">How it works </a></li>
+            <li><a href="#pricing" class="nav-link">Pricing </a></li>
+          </ul>
+        </div>
       </nav>
     </header>
+    <section id="features"></section>
+    <section id="howItWorks"></section>
+    <section id="pricing"></section>
 
-=======
->>>>>>> Stashed changes
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   </body>
