--- a/index.html
+++ b/index.html
@@ -3,51 +3,65 @@
   <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    <!-- <header class="navbar navbar-default" id="header">
-      <nav id="nav-bar">
-        <ul>
-          <li><a href="#" class="nav-link">Features </a></li>
-          <li><a href="#" class="nav-link">How it works </a></li>
-          <li><a href="#" class="nav-link">Pricing </a></li>
-        </ul>
-      </nav>
-    </header> -->
 
     <header id="header">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png" alt="logo" id="header-img">
       <nav class="navbar navbar-default" id="nav-bar">
         <div class="container-fluid">
 
-          <!-- <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-            </a>
-          </div> -->
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#">Home</a></li> -->
             <li><a href="#features" class="nav-link">Features </a></li>
             <li><a href="#howItWorks" class="nav-link">How it works </a></li>
             <li><a href="#pricing" class="nav-link">Pricing </a></li>
-     <!--     <div class="navbar-header">
-            <a class="navbar-brand" href="#">WebSiteName</a>
-          </div>
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#" class="nav-link">Features </a></li>
-            <li><a href="#" class="nav-link">How it works </a></li>
-            <li><a href="#" class="nav-link">Pricing </a></li>
->>>>>>> Stashed changes
-          </ul>
-        </div> -->
        </nav>
     </header>
-    <section id="features"></section>
+    <div class="container">
+        <form id="form" method="post" action="https://www.freecodecamp.com/email-submit">
+          <fieldset>
+            <input name="email" placeholder="Your Email" type="email" tabindex="2" required id="email">
+          </fieldset>
+          <fieldset>
+            <input name="submit" type="submit" id="submit" data-submit="...Sending" value="Submit"/>
+          </fieldset>
+        </form>
+      </div>
+    <section id="features">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-3 center-middle"><i class="fa fa-3x fa-fire"></i></div>
+          <div class="col-xs-9">
+            <p id="first-item">
+              Premium Materials Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-3 center-middle"><i class="fa fa-3x fa-fire"></i></div>
+          <div class="col-xs-9">
+            <p id="first-item">
+              Premium Materials Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-3 center-middle"><i class="fa fa-3x fa-fire"></i></div>
+          <div class="col-xs-9">
+            <p id="first-item">
+              Premium Materials Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="howItWorks">
       <p>This video gives you a idea about our Product</p>
       <iframe width="420" height="315"
@@ -56,25 +70,7 @@
     </section>
     <section id="pricing">
     </section>
-    <div class="container">
-      <form id="form" method="post">
-        <fieldset>
-          <input placeholder="Your Name" type="text" tabindex="1" required autofocus>
-        </fieldset>
-        <fieldset>
-          <input placeholder="Your Email" type="email" tabindex="2" required id="email">
-        </fieldset>
-        <fieldset>
-          <input placeholder="Your Number" type="tel" tabindex="3" required>
-        </fieldset>
-        <fieldset>
-          <textarea placeholder="What do you think of our Product?..." tabindex="5" required></textarea>
-        </fieldset>
-        <fieldset>
-          <input name="submit" type="submit" id="submit" data-submit="...Sending" value="Submit"/>
-        </fieldset>
-      </form>
-    </div>
+
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
