--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <body>
 
     <header id="header">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png" alt="logo" id="header-img">
-      <nav class="navbar navbar-default" id="nav-bar">
+ <!--      <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png" alt="logo" id="header-img"> -->
+      <nav class="navbar navbar-default navbar-fixed-top" id="nav-bar">
         <div class="container-fluid">
-
           <ul class="nav navbar-nav">
-            <!-- <li class="active"><a href="#">Home</a></li> -->
+            <li><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png" alt="logo" id="header-img"></li>
             <li><a href="#features" class="nav-link">Features </a></li>
             <li><a href="#howItWorks" class="nav-link">How it works </a></li>
             <li><a href="#pricing" class="nav-link">Pricing </a></li>
        </nav>
     </header>
+    <br> <br>
     <div class="container">
         <form id="form" method="post" action="https://www.freecodecamp.com/email-submit">
           <fieldset>
